--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ DB_NAME=biblioteca_db
 DB_PORT=3306
 
 # Configuración de Flask
-FLASK_SECRET=cambia_esta_clave_por_una_muy_segura_en_produccion
+FLASK_SECRET=clave123
 
 # Configuración de la Aplicación
 DEBUG=True
